<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_mart"
        android:background="@color/app_header" >

        <LinearLayout
            android:id="@+id/ll_left_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:visibility="gone"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/icon_header_logo_with_search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/image_content_desc"
                android:src="@drawable/header_icon_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_left_icon_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:layout_alignParentRight="true"
            android:weightSum="4"
            android:layout_marginLeft="-15dp"
            android:layout_marginRight="-15dp"
            android:gravity="center_vertical" >
            
            
            
             <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                
                android:layout_weight="1"
                android:gravity="center" >
            
             <ImageView
                android:id="@+id/icon_header_logo_without_search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/image_content_desc"
                android:src="@drawable/header_icon_1" />
            
             </LinearLayout>
             
            <ImageView
                android:id="@+id/icon_header_user"
                android:layout_width="20dp"
                android:layout_height="20dp"
 				android:contentDescription="@string/image_content_desc"
                android:layout_weight="1"
                android:src="@drawable/user_icon" />
            
            <ImageView
                android:id="@+id/icon_header_search"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/image_content_desc"

                android:layout_weight="1"
                android:src="@drawable/search_icon"
                 />

            <!-- android:src="@drawable/ic_menu_search_holo_light" -->
          
             <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                
                android:layout_weight="1"
                android:gravity="center" >
                
                 
                
                 <ImageView
                android:id="@+id/icon_header_cart"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/cart_icon"
                android:contentDescription="@string/image_content_desc"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="-7dp"
                android:paddingRight="0dp"
                
                android:paddingBottom="-10dp"
                android:paddingLeft="5dp" />
                 
                 <TextView
	                android:id="@+id/nom_producte"
	                android:layout_width="27dp"
	                android:layout_height="27dp"
	                android:layout_gravity="top"
	                android:layout_marginTop="7dp"
	                android:paddingBottom="2dp"
	                android:textSize="@dimen/text_size_13"
	                android:background="@drawable/notify"
	                android:gravity="center"
	                android:text="@string/Zero"
	                android:textColor="#0e69e5" />

                 
            </LinearLayout>
            
            
        </LinearLayout>
        
        <LinearLayout
        android:id="@+id/llSearchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_toRightOf="@+id/ll_left_icon" >
            
            
           <RelativeLayout 
               android:id="@+id/rl_serach_look"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="5dp"
               android:layout_marginRight="10dp"
               
               android:visibility="visible" >
                 
               <TextView 
                   android:id="@+id/tv1"
                   android:layout_width="1dp"
                   android:layout_height="10dp"
                   android:layout_marginTop="33dp"
               	   android:background="#ffa096" />
               
                <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edtSearch"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textColorHint="#ffa096"
                    android:hint="@string/search_"
                    android:textColor="#ffd0cb"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    
                    android:textSize="13sp" />
                
		<ImageView
                    android:id="@+id/imgSearchIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:visibility="gone"
                    android:src="@drawable/ic_menu_search_holo_light" />
                
            </LinearLayout>

            <ImageView
                android:id="@+id/imgSearchCloseIcon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/close_icon" />
        </LinearLayout>
               
               <TextView 
                   android:id="@+id/tv2"
                   android:layout_width="match_parent"
	               android:layout_height="1dp"
	               android:layout_marginTop="42dp"
	               android:layout_toRightOf="@+id/tv"
	               android:background="#ffa096" />
               
               <TextView 
                   android:layout_width="1dp"
                   android:layout_height="10dp"
                   android:layout_marginTop="33dp"
                   android:layout_alignParentRight="true"
               	   android:background="#ffa096" />
               
           </RelativeLayout>
           
    </LinearLayout>
        
    </RelativeLayout>
    
    <TextView
        android:id="@+id/screenName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/text_grey"
        android:visibility="gone"

        android:textSize="@dimen/header_screen_name_text"
        android:textStyle="bold" />
    
    <View
        android:id="@+id/header_shadow"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="gone"
        android:background="@drawable/shadow" />

</LinearLayout>
